完善GC组合解析