@@ -28,13 +28,46 @@ public class CommandLineParserTest {
     }
 
     @Test
-    public void testSerialSerialOldJDK8() {
+    public void testDefNewSerialOldJDK8() {
         String line = "CommandLine flags: -XX:GCLogFileSize=8388608 -XX:InitialHeapSize=30143744 "
                 + "-XX:MaxHeapSize=482299904 -XX:NumberOfGCLogFiles=2 -XX:+PrintGC -XX:+PrintGCDateStamps "
                 + "-XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+UseCompressedClassPointers -XX:+UseCompressedOops "
                 + "-XX:+UseGCLogFileRotation -XX:+UseSerialGC ";
         CommandLineData data = parser.parse(line);
-        assertEquals(data.getYoungGCName(), GCName.Serial);
+        assertEquals(data.getYoungGCName(), GCName.DefNew);
         assertEquals(data.getOldGCName(), GCName.SerialOld);
+    }
+
+    @Test
+    public void testParallelScavengeSerialOldJDK8() {
+        String line = "CommandLine flags: -XX:GCLogFileSize=8388608 -XX:InitialHeapSize=134217728 "
+                + "-XX:MaxHeapSize=2147483648 -XX:NumberOfGCLogFiles=2 -XX:+PrintGC -XX:+PrintGCDateStamps "
+                + "-XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+UseCompressedClassPointers -XX:+UseCompressedOops "
+                + "-XX:+UseGCLogFileRotation -XX:+UseParallelGC ";
+        CommandLineData data = parser.parse(line);
+        assertEquals(data.getYoungGCName(), GCName.ParallelScavenge);
+        assertEquals(data.getOldGCName(), GCName.SerialOld);
+    }
+
+    @Test
+    public void testParallelScavengeParallelOldJDK8() {
+        String line = "CommandLine flags: -XX:GCLogFileSize=8388608 -XX:InitialHeapSize=134217728 "
+                + "-XX:MaxHeapSize=2147483648 -XX:NumberOfGCLogFiles=2 -XX:+PrintGC -XX:+PrintGCDateStamps "
+                + "-XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+UseCompressedClassPointers -XX:+UseCompressedOops "
+                + "-XX:+UseGCLogFileRotation -XX:+UseParallelOldGC ";
+        CommandLineData data = parser.parse(line);
+        assertEquals(data.getYoungGCName(), GCName.ParallelScavenge);
+        assertEquals(data.getOldGCName(), GCName.ParallelOld);
+    }
+
+    @Test
+    public void testG1G1JDK8() {
+        String line = "CommandLine flags: -XX:GCLogFileSize=8388608 -XX:InitialHeapSize=134217728 "
+                + "-XX:MaxHeapSize=2147483648 -XX:NumberOfGCLogFiles=2 -XX:+PrintGC -XX:+PrintGCDateStamps "
+                + "-XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+UseCompressedClassPointers -XX:+UseCompressedOops "
+                + "-XX:+UseG1GC -XX:+UseGCLogFileRotation ";
+        CommandLineData data = parser.parse(line);
+        assertEquals(data.getYoungGCName(), GCName.G1);
+        assertEquals(data.getOldGCName(), GCName.G1);
     }
 }
